[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hp-printer-maintenance"
version = "1.0.0"
description = "CLI tool for HP inkjet printer maintenance via the Embedded Web Server"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "zeroconf>=0.131.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.scripts]
hpmaint = "hpmaint.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hpmaint"]
